# sup-mem

./: .env.example  .gitignore  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  SECURITY.md  docker-compose.qdrant.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: bench.py
docs/: LAUNCH.md  PHASE10-CAPTURE.md  PHASE6-LOOP.md  PHASE8-TEMPORAL.md  PHASE9-ARCHIVAL.md  demo.tape  demo_seed.py
src/claude_memory/: __init__.py  cli.py  commands.py  config.py  manifest.py  migrate.py  registration.py
src/claude_memory/backends/: __init__.py  base.py  qdrant.py  sqlite_fts.py
src/claude_memory/embedding/: __init__.py  detect.py  providers.py
src/claude_memory/hook/: session_start.py  user_prompt_submit.py
src/claude_memory/mcp/: __init__.py  server.py
src/sup_mem/: __init__.py  archival.py  capture.py  cli.py  commands.py  config.py  ledger.py  maintenance.py  manifest.py  migrate.py  models.py  provenance.py  ranking.py  registration.py  service.py  status.py
src/sup_mem/backends/: __init__.py  base.py  qdrant.py  sqlite_fts.py
src/sup_mem/clients/: __init__.py  antigravity.py  base.py  claude.py  codex.py  gemini.py
src/sup_mem/embedding/: __init__.py  base.py  detect.py  providers.py
src/sup_mem/hook/: __init__.py  emit.py  pre_compact.py  session_start.py  stop.py  user_prompt_submit.py
src/sup_mem/mcp/: server.py
tests/: conftest.py  test_archival.py  test_backends.py  test_capture.py  test_clients.py  test_consistency.py  test_e2e.py  test_embedding_detect.py  test_hook_tiers.py  test_latency.py  test_ledger.py  test_loop.py  test_maintenance.py  test_manifest_scale.py  test_mcp.py  test_migrate.py  test_provenance.py  test_registration.py  test_status.py  test_temporal.py
